recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:5: error: not found: value occurences
    case h::q if (h==v) => 1 + occurences(q, v)
                               ^Occurrences:6: error: not found: value occurences
    case _::q => occurences(q,v)
                 ^