recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  l match {
    case Nil => 0
    case h::q if (h==v) => 1 + occurences(q, v)
    case _::q => occurences(q,v)
  }
}